<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter email"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="number"
        android:hint="@string/enter_phone_number" />

    <EditText
        android:id="@+id/user_name_for_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:layout_margin="5dp"
        android:inputType="none" />

    <EditText
        android:id="@+id/passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passcode"
        android:layout_margin="5dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_margin="5dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/create_account"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:inputType="none" />
</LinearLayout>